<resources>
    <string name="app_name">Inventory App</string>
    <string name="inventory_app">Mollysa\'s Inventory App</string>
    <string name="username">Enter username</string>
    <string name="password">Enter password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="inventory">Inventory</string>
    <string name="add_item">Add Item</string>
    <string name="item_name">Item Name</string>
    <string name="delete_item">Delete</string>
    <string name="edit_item">Edit Item</string>
    <string name="quantity">Quantity</string>
    <string name="clear">Clear</string>
    <string name="upload_image">Upload Image</string>
    <string name="enable_sms_notifications">Enable SMS Notifications</string>
    <string name="settings">Settings</string>
    <string name="open_settings">Settings</string>
    <string name="update_item">Update Item</string>
    <string name="item_image">Item Image</string>
</resources>