<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/item_name"
        android:inputType="" />

    <EditText
        android:id="@+id/editItemQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/quantity"
        android:inputType="number" />

    <Button
        android:id="@+id/buttonUpdateItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_item" />
</LinearLayout>
