<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".EditItemActivity">

    <!-- Title -->
    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_item"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif-bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:textAlignment="center" />

    <!-- Item Name -->
    <EditText
        android:id="@+id/itemNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/item_name"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"/>

    <!-- Quantity -->
    <EditText
        android:id="@+id/itemQuantityEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/quantity"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/itemNameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <!-- Image Upload Button -->
    <Button
        android:id="@+id/uploadImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_image"
        app:layout_constraintTop_toBottomOf="@+id/itemQuantityEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <!-- Image Preview -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/uploadImageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@android:drawable/ic_menu_camera" />

    <!-- Add Item Button -->
    <Button
        android:id="@+id/addItemButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_item"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"/>

    <!-- Clear Button -->
    <Button
        android:id="@+id/clearButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        app:layout_constraintTop_toBottomOf="@id/addItemButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
